# goose-os

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  goose-upgrade.sh  linker-vf2.ld  linker.ld
docs/: social-posts.md  unsafe-audit.md
docs/book/: ch44-first-user-packet.md  ch45-one-concern-per-folder.md  ch46-dwmac-blueprint.md  part-16-category.json  phase-b-networking.md
kernel/: linker-vf2.ld  linker.ld  rust-toolchain.toml
kernel/.cargo/: config.toml
kernel/src/: abi.rs  boot.rs  console.rs  driver.rs  elf.rs  handlers.rs  ipc.rs  kvm.rs  lifecycle.rs  main.rs  net.rs  page_table.rs  plic.rs  process.rs  sched.rs  security.rs  syscall.rs  trap.rs  uart.rs  virtio.rs  wasi.rs  wasm.rs
platform/vf2/: u-boot-spl.bin.normal.out  visionfive2_fw_payload.img
scripts/: goose-upgrade.sh
src/: boot.S  console.rs  elf.rs  interp.rs  kvm.rs  main.rs  page_alloc.rs  page_table.rs  platform.rs  plic.rs  process.rs  security.rs  trap.S  trap.rs  uart.rs  wasm.rs
user/hello/: linker.ld  rustc-ice-2026-04-15T08_28_13-1102522.txt  rustc-ice-2026-04-15T08_28_29-1102577.txt
user/hello/src/: gooseos.rs  main.rs  start.S
userspace/hello/: Cargo.toml  rust-toolchain.toml
userspace/hello/src/: gooseos.rs  main.rs
userspace/netsrv/: Cargo.toml  linker.ld  rust-toolchain.toml
userspace/netsrv/src/: gooseos.rs  main.rs  start.S
wari/: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  rust-toolchain.toml
wari/abi-shared/: Cargo.toml
wari/abi-shared/src/: lib.rs
wari/apps/hello/: Cargo.toml
wari/apps/hello/src/: lib.rs
wari/docs/: architecture.md  invariants.md  pr-workflow.md  prior-art.md  security-model.md  testing.md  wasi-surface.md
wari/docs/audits/: README.md
wari/docs/book/: README.md
wari/docs/book/part-1-architecture/: README.md  _category_.json  ch01-why-wari.md  ch02-shoulders-we-stand-on.md  ch03-wasm-only-bet.md  ch04-two-tiers.md  ch05-inheritance-from-goose.md  ch06-invariants.md  ch07-immutable-endpoint.md
wari/drivers/: README.md
wari/drivers/gapu/: README.md
wari/drivers/gpu/: README.md
wari/drivers/net/: README.md
wari/drivers/uart/: README.md
wari/kernel/: Cargo.toml  linker.ld
wari/kernel/.cargo/: config.toml
wari/kernel/src/: abi.rs  boot.rs  error.rs  ipc.rs  main.rs  trap.rs  validate.rs
wari/kernel/src/mem/: kvm.rs  mod.rs  page_alloc.rs  page_table.rs
wari/kernel/src/mmio/: mod.rs  volatile.rs
wari/kernel/src/runtime/: mod.rs  wasmi_host.rs
wari/kernel/src/sched/: mod.rs  process.rs  scheduler.rs
wari/platform/vf2/: README.md
wari/scripts/: README.md
wari/tests/: README.md
wari/tests/fuzz/: .gitkeep
wari/tests/integration/: .gitkeep
wari/tests/security/: .gitkeep
wari/tools/qemu-runner/: Cargo.toml
wari/tools/qemu-runner/src/: main.rs
wari/wasi/: Cargo.toml
wari/wasi/src/: lib.rs  preview1.rs  wari_ext.rs
