[package]
name = "goose-os"
version = "0.1.0"
edition = "2021"

[features]
default = ["qemu"]
qemu = []
vf2 = []
security-test = ["qemu"]  # Boots security test process instead of normal init
debug-kernel = []          # Enable kdebug!/kdump macros (verbose kernel tracing)

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 2
lto = true
