[package]
name = "goose-os"
version = "0.1.0"
edition = "2021"

[features]
default = ["qemu"]
qemu = []
vf2 = []
security-test = ["qemu"]  # Boots security test process instead of normal init
wasm-test = []            # Runs WASM/WASI hello world via interpreter (no userspace)
rust-user = []            # Boot compiled Rust ELF binary as PID 1 (no assembly userspace)
debug-kernel = []          # Enable kdebug!/kdump macros (verbose kernel tracing)

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 2
lto = true
